<resources>
    <string name="app_name">NUMAD20F-PrakashKumar</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="about_first_fragment_label">About</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="button_pressed">Press Buttons</string>
    <string name="button_linkcollector">Link Collector</string>


    <string name="hello_first_fragment">Hello World!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Name">Prakash Tarun Kumar</string>
    <string name="Email">kumar.prak@northeastern.edu</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <string name="activity_buttons_A">A</string>
    <string name="activity_buttons_B">B</string>
    <string name="activity_buttons_C">C</string>
    <string name="activity_buttons_D">D</string>
    <string name="activity_buttons_E">E</string>
    <string name="activity_buttons_F">F</string>

    <string name="activity_buttons_pressed_A">Pressed: A</string>
    <string name="activity_buttons_pressed_B">Pressed: B</string>
    <string name="activity_buttons_pressed_C">Pressed: C</string>
    <string name="activity_buttons_pressed_D">Pressed: D</string>
    <string name="activity_buttons_pressed_E">Pressed: E</string>
    <string name="activity_buttons_pressed_F">Pressed: F</string>

    <string name="textView_LinkCollector_Name">Name</string>
    <string name="textView_LinkCollector_URL">URL</string>
    <string name="autofill_URLName">Enter Name</string>
    <string name="autofill_URLLink">Enter Link</string>
    <string name="url_name">URL Name</string>
    <string name="url_link">URL Link</string>


    <string name="button_location">Location</string>
    <string name="txt_latitude">Latitude</string>
    <string name="txt_longitude">Longitude</string>
    <string name="button_getLocation">Get Location</string>

    <string name="btn_webservice">Web Service - Text</string>
    <string name="placeholder_dic_name">Search Meaning</string>
    <string name="btn_search_meaning">Get Meaning</string>
    <string name="txtview_pronunciation">Pronunciation :</string>
    <string name="txtview_Meaning">Meaning :</string>
    <string name="txtview_Synonyms">Synonyms :</string>
    <string name="txtview_Example">Example :</string>
    <string name="txtview_word">Word</string>

    <string name="btn_ws">Web Service - Image</string>
</resources>