<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_button">

    <Button
        android:id="@+id/button_F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_buttons_F"
        app:layout_constraintBottom_toTopOf="@+id/textView_ButtonPressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_E"
        app:layout_constraintTop_toBottomOf="@+id/button_C" />

    <Button
        android:id="@+id/button_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_buttons_A"
        app:layout_constraintBottom_toTopOf="@+id/button_D"
        app:layout_constraintEnd_toStartOf="@+id/button_B"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_buttons_B"
        app:layout_constraintBottom_toTopOf="@+id/button_E"
        app:layout_constraintEnd_toStartOf="@+id/button_C"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_A"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_buttons_C"
        app:layout_constraintBottom_toTopOf="@+id/button_F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_B"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_buttons_D"
        app:layout_constraintBottom_toTopOf="@+id/textView_ButtonPressed"
        app:layout_constraintEnd_toStartOf="@+id/button_E"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_A" />

    <Button
        android:id="@+id/button_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_buttons_E"
        app:layout_constraintBottom_toTopOf="@+id/textView_ButtonPressed"
        app:layout_constraintEnd_toStartOf="@+id/button_F"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_D"
        app:layout_constraintTop_toBottomOf="@+id/button_B" />

    <TextView
        android:id="@+id/textView_ButtonPressed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_E"
        android:freezesText="true" />
</androidx.constraintlayout.widget.ConstraintLayout>