<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints="@string/Name"
    tools:context=".LinkCollector">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_addLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:backgroundTint="#D80909"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="42dp"
        app:rippleColor="#E11313"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/txtView_URL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/textView_LinkCollector_URL"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtView_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/textView_LinkCollector_Name"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtView_URL"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputtxt_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:autofillHints="@string/autofill_URLName"
        android:ems="10"
        android:hint="@string/autofill_URLName"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/inputtxt_URLLink"
        app:layout_constraintStart_toEndOf="@+id/txtView_Name" />

    <EditText
        android:id="@+id/inputtxt_URLLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="24dp"
        android:autofillHints="@string/autofill_URLLink"
        android:ems="10"
        android:hint="@string/autofill_URLName"
        android:inputType="textUri"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtView_URL" />

</androidx.constraintlayout.widget.ConstraintLayout>